--- a/src/app/homepage-registration/homepage-registration.component.scss
+++ b/src/app/homepage-registration/homepage-registration.component.scss
@@ -20,6 +20,9 @@ body{
   flex-direction: column;
   align-items: center;
 }
+.chip-container{
+  max-width: 550px;
+}
 footer{
   margin-top: auto;
 }
